--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ redis>=5.0.0
 python-dotenv>=1.0.0
 
 # OAuth
-authlib>=1.3.0
+authlib>=1.6.6
 httpx>=0.26.0
 
 # Security
@@ -25,3 +25,7 @@ itsdangerous>=2.1.2
 # Settings & Validation
 pydantic[email]>=2.5.0
 pydantic-settings>=2.1.0
+
+pydantic-settings>=2.12.0
+
+email_validator
