update: [cjy] N/K/G 공통 라우팅 구조 생성 [GS-1]

--- a/.env.example
+++ b/.env.example
@@ -24,12 +24,12 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:33333/api/v1/auth/google/callback
 
-# OAuth - Kakao (future)
+# OAuth - Kakao
 KAKAO_CLIENT_ID=
 KAKAO_CLIENT_SECRET=
 KAKAO_REDIRECT_URI=http://localhost:33333/api/v1/auth/kakao/callback
 
-# OAuth - Naver (future)
+# OAuth - Naver
 NAVER_CLIENT_ID=
 NAVER_CLIENT_SECRET=
 NAVER_REDIRECT_URI=http://localhost:33333/api/v1/auth/naver/callback
@@ -38,7 +38,18 @@ NAVER_REDIRECT_URI=http://localhost:33333/api/v1/auth/naver/callback
 CSRF_SECRET_KEY=your_random_secret_key_at_least_32_characters_long
 COOKIE_SECURE=false
 
-# Session
+# JWT Settings
+JWT_SECRET_KEY=your_jwt_secret_key_at_least_32_characters_long
+JWT_ENCRYPTION_KEY=your_jwt_encryption_key_at_least_32_characters_long
+JWT_EXPIRY_HOURS=12
+JWT_HTTPONLY=true
+
+# Environment (local, staging, production)
+# local: HTTP allowed, secure=false
+# production: HTTPS required, secure=true
+ENVIRONMENT=local
+
+# Session (legacy - kept for backward compatibility)
 SESSION_TTL_SECONDS=86400
 
 # Frontend URL for OAuth redirect
