chore: [나큰솔] .gitignore 변경

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,9 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # Python bytecode
+# Python
 __pycache__/
 *.pyc
-*.pyo
-*.pyd
 
 # User-specific stuff
 .idea/**/workspace.xml
